add Collection set