@@ -1,5 +1,7 @@
 package list;
+import java.util.HashMap;
 import java.util.LinkedList;
+import java.util.NavigableMap;
 
 public class LinkedListTest {
 
@@ -11,53 +13,43 @@ public class LinkedListTest {
         ll.add("c");
         ll.add("d");
 
-        System.out.println("ll: " + ll);
-
-        ll.removeFirst();
-
-        System.out.println("ll: " + ll);
-
-        ll.removeLast();
-        
-        System.out.println("ll: " + ll);
-
-
          //create
         ll.add("f");
         ll.add(0, "aa?");
         ll.offer(null);
-        ll.offerFirst(null);
-        ll.offerLast(null);
-        ll.push(null);
+        // ll.offerFirst(null);
+        // ll.offerLast(null);
+        // ll.push(null);
 
         System.out.println("ll: " + ll);
-        //read
-        ll.get(0);
-        ll.getFirst();
-        ll.getLast();
-        ll.indexOf(ll);
-        ll.contains(ll);
-        ll.containsAll(ll);
-        ll.peek();
-        ll.peekLast();
-        ll.peekFirst();
-        ll.isEmpty();
-        ll.equals("c");
+        System.out.println("ll index?: " + ll.get(2));
+        // //read
+        // ll.get(0);
+        // ll.getFirst();
+        // ll.getLast();
+        // ll.indexOf(ll);
+        // ll.contains(ll);
+        // ll.containsAll(ll);
+        // ll.peek();
+        // ll.peekLast();
+        // ll.peekFirst();
+        // ll.isEmpty();
+        // ll.equals("c");
 
-        //update
-        ll.set(0, null);
+        // //update
+        // ll.set(0, null);
         
-        //delete
-        ll.remove();
-        ll.clear();
-        ll.removeFirst();
-        ll.removeIf(null);
-        ll.removeAll(ll);
-        ll.removeLast();
-        ll.poll();
-        ll.pollFirst();
-        ll.pollLast();
-        ll.pop();
+        // //delete
+        // ll.remove();
+        // ll.clear();
+        // ll.removeFirst();
+        // ll.removeIf(null);
+        // ll.removeAll(ll);
+        // ll.removeLast();
+        // ll.poll();
+        // ll.pollFirst();
+        // ll.pollLast();
+        // ll.pop();
         
     }
     
